# KissyV2

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: 01_system_architecture.md  02_use_cases.md  examples.md  invoiceninja-volumes.md  invoiceninja.md  ninja-bot-integration.md
docs/history/: README.md  mvp-scope.md  roadmap.md  session-0.1.md
examples/: counter_bot.py  db_ollama_bot.py  echo_bot.py  invoiceninja_bot.py  ollama_bot.py  ollama_smoketest.py
nginx/: invoiceninja.conf  laravel.conf
scripts/: install_uv.sh  setup.sh  start_ninja.sh
scripts/db/: create_db.sh  schema.sql
scripts/systemd/: kissy-bot.service.example
src/invoiceninja/: __init__.py
src/ollama/: __init__.py
src/telegram_bot/: bot.py  config.py  db.py
tests/: test_smoke.py
